<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_controls"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="4dp"
            android:paddingRight="16dp"
            android:paddingStart="4dp"
            android:paddingEnd="16dp"
            android:text="@string/time_placeholder"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold"
             />

        <com.google.android.exoplayer2.ui.DefaultTimeBar
            android:id="@id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingLeft="16dp"
            android:paddingRight="4dp"
            android:paddingStart="16dp"
            android:paddingEnd="4dp"
            android:text="@string/time_placeholder"
            android:textColor="#FFBEBEBE"
            android:textSize="14sp"
            android:textStyle="bold"
             />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@id/exo_rew"
            style="@style/ExoMediaButton.Rewind"
            android:layout_margin="8dp"
            android:contentDescription="@string/rew_desc"
            android:src="@drawable/media_icon_rew"
            android:tint="@color/exo_white" />

        <ImageButton
            android:id="@id/exo_play"
            style="@style/ExoMediaButton.Play"
            android:layout_margin="8dp"
            android:contentDescription="@string/play_button_desc"
            android:src="@drawable/icon_64x_play" />

        <ImageButton
            android:id="@id/exo_pause"
            style="@style/ExoMediaButton.Pause"
            android:layout_margin="8dp"
            android:contentDescription="@string/pause_button_desc"
            android:src="@drawable/icon_64x_pause" />

        <ImageButton
            android:id="@id/exo_ffwd"
            style="@style/ExoMediaButton.FastForward"
            android:layout_margin="8dp"
            android:contentDescription="@string/ff_button_desc"
            android:src="@drawable/media_icon_fwd" />

    </LinearLayout>
</LinearLayout>